--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/android_background"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".LoginActivity">
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-   <android.support.constraint.ConstraintLayout
+
+   <RelativeLayout
+       android:layout_marginTop="30dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_marginStart="8dp"
-           android:layout_marginTop="46dp"
-           android:layout_marginEnd="8dp"
+           android:layout_marginLeft="40dp"
            android:fontFamily="@font/my_beautiful_font"
            android:text="@string/title"
            android:textColor="#FFFFFF"
@@ -34,13 +33,13 @@
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
+
     <EditText
         android:id="@+id/username"
-        android:layout_width="0dp"
+        android:layout_below="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-
-
+        android:layout_marginTop="30dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -50,9 +49,10 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/username"
+        android:layout_marginTop="10dp"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
@@ -63,56 +63,59 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="146dp" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="175sp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:enabled="false"
-        android:background="@drawable/round_fill"
-        android:text="@string/action_sign_in"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.2" />
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+       <Button
+           android:id="@+id/login"
+           android:layout_below="@+id/password"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:layout_centerHorizontal="true"
+           android:layout_marginTop="30dp"
+           android:paddingLeft="30dp"
+           android:paddingRight="30dp"
+           android:background="@drawable/round_fill"
+           android:textColor="@color/black"
+           android:text="@string/action_sign_in" />
+
+       <Button
+           android:id="@+id/regiter"
+           android:layout_below="@+id/login"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:layout_centerHorizontal="true"
+           android:layout_marginTop="30dp"
+           android:paddingLeft="30dp"
+           android:paddingRight="30dp"
+           android:background="@drawable/round_fill"
+           android:textColor="@color/black"
+           android:text="@string/register" />
+
+
     <Button
         android:id="@+id/guest_mode"
+        android:layout_below="@+id/regiter"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:enabled="false"
+        android:textColor="@color/black"
         android:text="@string/action_guest_mode"
-        android:background="@drawable/round_fill"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login"
-        app:layout_constraintVertical_bias="0.2" />
-    </android.support.constraint.ConstraintLayout>
+        android:background="@drawable/round_fill" />
+
+       <ProgressBar
+           android:id="@+id/loading"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_below="@+id/guest_mode"
+           android:layout_centerHorizontal="true"
+           android:layout_gravity="center"
+           android:layout_marginTop="20dp"
+           android:layout_marginBottom="30dp"
+           android:visibility="gone" />
+    </RelativeLayout>
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
