--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
    <RelativeLayout
        android:layout_marginTop="30dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
        <TextView
@@ -100,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="48dp"
         android:textColor="@color/black"
@@ -113,9 +114,9 @@
            android:layout_below="@+id/guest_mode"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
-           android:layout_marginTop="20dp"
+           android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
-           android:visibility="gone" />
+           android:visibility="visible" />
     </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
