--- a/app/src/main/res/drawable/round_fill.xml
+++ b/app/src/main/res/drawable/round_fill.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    android:shape="rectangle">
-
-    <solid android:color="#5CFFFFFF"/>
-    <corners android:radius="99999dp"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorPrimary">
+    <item>
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#5CFFFFFF"/>
+            <corners android:radius="99999dp"/>
+        </shape>
+    </item>
+</ripple>
