--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,9 +19,9 @@
 
             <TextView
                 android:id="@+id/title_reg"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="20dp"
                 android:fontFamily="@font/my_beautiful_font"
                 android:text="@string/title"
                 android:textColor="#FFFFFF"
