--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,7 @@
            android:id="@+id/sign_in_button"
            android:layout_below="@+id/forgetpassword"
            android:layout_marginTop="30dp"
+           app:colorScheme="light"
 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
