--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_height="match_parent"
     tools:context=".ui.Profile.ProfileFragment">
 
@@ -10,8 +13,10 @@
         android:id="@+id/img_profileimage"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/profile" />
 
