--- a/app/src/main/res/layout/recycle_home.xml
+++ b/app/src/main/res/layout/recycle_home.xml
@@ -60,6 +60,7 @@
                             android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:id="@+id/tv_views"
                             android:layout_width="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:textColor="@color/black"
@@ -73,6 +74,7 @@
                             android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:id="@+id/tv_likes"
                             android:layout_width="wrap_content"
                             android:text="0"
                             android:layout_marginLeft="5dp"
@@ -83,16 +85,88 @@
                     </LinearLayout>
 
 
-                    <TextView
-                        android:id="@+id/tv_catogory"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black"
-                        android:layout_below="@+id/tv_authorname"
-                        android:textSize="18sp"
-                        tools:text="Category" />
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_category1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="invisible"
+                            android:paddingLeft="20dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingRight="20dp"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/categorylayout"
+                            android:text="Hello"
+                            android:textAllCaps="true"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_category2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="invisible"
+                            android:paddingLeft="20dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:layout_marginLeft="5dp"
+                            android:paddingRight="20dp"
+                            android:background="@drawable/categorylayout"
+                            android:text="Hello"
+                            android:textAllCaps="true"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_category3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="20dp"
+                            android:visibility="gone"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingRight="20dp"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/categorylayout"
+                            android:text="Hello"
+                            android:textAllCaps="true"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_categorymore"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="20dp"
+                            android:visibility="gone"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingRight="20dp"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/categorylayout"
+                            android:text="Hello"
+                            android:textAllCaps="true"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+
+
+                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/tv_story"
