--- a/app/src/main/res/layout/recycle_home.xml
+++ b/app/src/main/res/layout/recycle_home.xml
@@ -16,8 +16,12 @@
     <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
         android:orientation="horizontal" android:weightSum="1">
 
-    <ImageView android:layout_height="match_parent" android:layout_width="100dp"
-        android:id="@+id/img_bookimage" android:src="@drawable/picture1"/>
+    <ImageView
+        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:scaleType="fitXY"
+        android:id="@+id/img_bookimage"
+        android:src="@drawable/picture1"/>
 
 
     <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
