--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -11,7 +11,10 @@
 
         <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/recycler_comment" android:layout_marginBottom="70dp" android:layout_marginRight="10dp" android:layout_marginTop="20dp" android:layout_marginLeft="10dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_height="wrap_content" android:layout_width="match_parent"
+        android:id="@+id/recycler_comment" android:layout_marginBottom="70dp"
+        android:layout_marginRight="10dp" android:layout_marginTop="20dp" android:layout_marginLeft="10dp"/>
 
 </RelativeLayout>
 
