--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content">
         <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <p013de.hdodenhof.circleimageview.CircleImageView android:id="@+id/iv_user_comment"
+            <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/iv_user_comment"
                 android:layout_width="50dp" android:layout_height="50dp"
                 android:src="@drawable/picture1"/>
             <com.google.android.material.textfield.TextInputLayout android:id="@+id/et_comment"
