--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -15,7 +15,7 @@
     <RelativeLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:layout_gravity="center">
 
-    <p013de.hdodenhof.circleimageview.CircleImageView android:layout_height="150dp"
+    <de.hdodenhof.circleimageview.CircleImageView android:layout_height="150dp"
         android:layout_width="150dp" android:id="@+id/img_profileimage" android:layout_centerHorizontal="true"
         android:src="@drawable/profile" android:layout_marginRight="20dp" android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"/>
