--- a/app/src/main/res/layout/recycle_comments.xml
+++ b/app/src/main/res/layout/recycle_comments.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
 
-    <p013de.hdodenhof.circleimageview.CircleImageView android:layout_height="50dp"
+    <de.hdodenhof.circleimageview.CircleImageView android:layout_height="50dp"
         android:layout_width="50dp" android:src="@drawable/picture1" android:layout_marginTop="5dp"
         android:id="@+id/img_comment"/>
 
